[chore]: update useful links and unit 6 notes

--- a/_posts/2024-03-02-unit6.md
+++ b/_posts/2024-03-02-unit6.md
@@ -5,3 +5,286 @@ sidebar:
 aside:
   toc: true
 ---
+
+## Redis
+
+- Key-value database for building scalable and high performace web applications.
+- Redis is also a multi-modal database that allows for seaching, messaging, storing graph data and much more.
+
+### Data Storage
+
+- Redis stores data in memory for fast access.
+
+- Supported data structures in redis include;
+  - String
+  - List
+  - Set
+  - Sorted Set
+  - Hash
+  - Bit Array
+  - Hyperloglog
+  - Stream
+  - Geospatial indexes
+
+### Common use cases of Redis
+- Caching
+- Real time data analytics
+- Full-text fuzzy search
+- Handling geospatial and time-series data
+- Messaging/queuing
+
+- [Redis University](https://redis.io/university/)
+
+
+### Redis server and cli interface
+Redis runs as a server-side software and provides a command line interface
+## [Install Redis aor Redis stack](https://redis.io/docs/latest/operate/oss_and_stack/install/)
+
+Redis is a TCP Server: Redis communicates with clients over a TCP network connection.
+Request/Response Protocol: The interaction between the client and the Redis server follows a request-response pattern.
+
+Steps in a Redis Request/Response:
+- Client Sends Query: The client sends a command or query to the Redis server over the TCP connection.
+- Client Reads Response: The client then reads the response from the server, usually in a "blocking" way, meaning the client waits until the full response is received.
+- Server Processes Command: When the Redis server receives the client's request, it processes the command.
+- Server Sends Response: After processing the command, the Redis server sends the response back to the client over the same TCP connection.
+
+Traditional Request-Response: Normally, when a client sends a request to the Redis server, it waits for the response before sending the next request. This is a synchronous, one-request-at-a-time communication model.
+
+Pipelining: Pipelining allows the client to send multiple requests to the server without waiting for the replies. The client can send several commands back-to-back without pausing.
+
+Check redis for pipelining: 
+- One way to observe pipelining is to use the MONITOR command in the Redis CLI.
+- The MONITOR command will display all the commands received by the Redis server in real-time.
+- When you see multiple commands being executed in rapid succession without waiting for responses, that indicates the client is using pipelining.
+- You can also test pipelining directly in the Redis command-line interface (CLI). In the Redis CLI, you can enter multiple commands separated by the newline character \n without pressing Enter.
+```javascript
+SET key1 value1\n
+SET key2 value2\n
+GET key1\n
+GET key2
+```
+- This will send all four commands to the server without waiting for the responses. The server will then send back all the responses together.
+
+### Client and Drivers
+Redis provides clients and drivers to support several programming languages
+
+### Databases
+In redis database, there are no formal database creation statments(DDL) instead the 'SET' command is used to create all data.
+
+Redis is a type of database that stores data in memory, which means the data is kept in the computer's active memory rather than on a hard drive. This makes it very fast to access the data.
+
+However, storing data only in memory can be risky because if the server crashes or loses power, the data could be lost. To prevent this, Redis regularly writes the contents of the database to a file on the server's disk storage.
+
+The frequency of these disk writes is configurable. Redis can be set to write the data to disk at regular intervals, like every 60 seconds, or after a certain amount of data has changed, like every 10,000 changes.
+
+Persisting the data to disk ensures that even if the server becomes unavailable due to a software or hardware failure, the data is still saved and can be recovered. This makes the database more durable and reliable.
+
+## Redis Common Comands
+
+In Redis, data is stored using keys. These keys can be almost anything, from simple strings to more complex formats like images. Most keys are just plain text strings.
+
+SET and GET commands: The main commands for working with data in Redis are:
+- SET: This command creates or updates the value associated with a given key.
+- GET: This retrieves the value associated with a given key.
+
+Overwriting values: When you use the SET command on a key that already exists, the new value will overwrite the old one. The last value set is the one that will be stored and retrieved.
+
+Data models
+- The values associated with keys can be formatted in various ways to create data models tailored to the needs of the organization. This allows Redis to be used for a variety of use cases, beyond just simple key-value storage.
+
+## [Redis Cli](https://redis.io/docs/latest/develop/connect/cli/)
+
+## Redis Data Types
+
+1. Strings
+- Strings are the simplest data type in Redis.
+- To store a string value, you use the SET command, which requires a key and a value.
+- For example, to store the value "steve" with the key "user", you would run: 
+
+```javascript
+SET user "dema"
+```
+- You can retrieve the value using the GET command, like GET user, which would return "dema".
+
+```javascript
+GET user 
+```
+Strings can also be used as counters. For example, you can use the INCR command to increment a key called "logincount" from 1 to 2.
+
+```javascript
+SET logincount 1
+INCR logincount
+GET logincount
+```
+The largest size for a single string value is 512MB i.e it is possible  to store 2^32 values inside one string value in Redis.
+
+2. Bitmaps
+- Bitmaps are a special type of string that can efficiently represent many data elements as either on (1) or off (0).
+- This is useful for tracking things like whether a user is active or inactive, where there are only two possible states.
+- There are specific commands for working with bitmaps, such as SETBIT and GETBIT, which set and retrieve individual bits within the bitmap.
+
+3. Lists
+- Lists in Redis are a way to store related data, similar to an array.
+- However, Redis lists are implemented as a linked list, which means adding items to the list is very fast.But reading items from the middle of the list may not be as fast, depending on where the item is located.
+- Lists use a single key to hold multiple ordered values, which are stored as strings.You can add new values to the beginning (left/head) or end (right/tail) of the list using the LPUSH and RPUSH commands.
+- For example, to create a list with two items, you can run:
+```javascript
+LPUSH users "dechen" "dorji"
+```
+This will create a list with "dechen" at index 0 and "dorji" at index 1.
+
+- To retrieve a specific item from the list, you use the LINDEX command.
+```javascript
+LINDEX users 0
+```
+- If you try to retrieve an index that doesn't exist, you'll get (nil) as the output.
+
+- To get all the items in the list, or a range of items, you use the LRANGE command.
+```javascript
+LRANGE users 0 -1
+```
+The -1 means "retrieve items up to the end of the list".
+
+- Values in a Redis list can be repeated, meaning you can have the same value at different indexes in the list.This is different from a set, which doesn't allow duplicate values.
+
+4. Sets
+- Sets in Redis are similar to lists, in that they allow you to store multiple values under a single key.
+- However, sets are different from lists in a few key ways:
+  - Sets are unordered, so you can't retrieve values by index like you can with lists.
+  - Sets don't allow duplicate values - each value in a set must be unique.
+- To add a value to a set, you use the SADD command.
+```javascript
+SADD student tshering
+```
+- To get all values in a set, SMEMBERS command can be used to return all members.
+```javascript
+SMEMBERS student
+```
+- To check if a value is in a set, you use the SISMEMBER command, which will return 1 if the value is in the set, or 0 if it's not.
+```javascript
+SISMEMBER student tshering
+```
+5. Hashes
+- Hashes in Redis are used to store collections of key-value pairs.
+- This is different from a simple string value, where there is one value per key.
+- With a hash, you have a main key, and then within that hash, there are multiple fields and values.
+
+- To set the values in a hash, you use the HSET command, example
+```javascript
+HSET student:1 modules 3 program "BESWE" 
+```
+- To retrieve a specific field from the hash, you use the HGET command, example
+```javascript
+HGET student:1 
+```
+```javascript
+HGET student:1 modules
+```
+6. Sorted Sets
+- Sorted Sets are used to store data that needs to be ranked, like a leaderboard
+- Each member in the Sorted Set has a score associated with it, which is a number.
+- To add members to a Sorted Set, you use the ZADD command, specifying the score and member.
+```javascript
+ZADD users 20 sonam 2 thinley 13 dema
+```
+This would create a Sorted Set with those members and scores.
+
+- To retrieve the members in order, you use the ZRANGE command. You can get just the members, or the members and their scores.
+```javascript
+ZRANGE users 0 -1 WITHSCORES
+```
+This would return the members and scores, sorted by the score.
+
+-You can also increment a member's score using the ZINCRBY command, example
+```javascript
+ZINCRBY users 20 thinley
+```
+- The ZRANK command lets you determine the ranking of a specific member in the Sorted Set.
+
+7. Hyperloglog
+- HyperLogLog is a special data type used to keep an estimated count of unique items, like unique visitors to a website.
+- It works by maintaining an internal hash to keep track of whether it's seen a value before.
+- To add a new item to the HyperLogLog, you use the PFADD command, like
+```javascript
+PFADD databases "postgresql"
+```
+This will return 1 if the value was added, or 0 if it had already been seen.
+- To get the estimated count of unique items, you use the PFCOUNT command.
+- HyperLogLog is a very efficient way to track unique counts, without having to store all the individual values.
+```javascript
+PFADD databases "redis"
+PFADD databases "mongodb"
+PFCOUNT databases
+```
+### Redis patterns
+
+1.  Redis Pub/Sub(Publisher/Subscribe)
+- Pub/Sub is a way to use Redis for fast and efficient message exchange between publishers and subscribers.
+- A publisher creates a "channel" and publishes messages to it using the PUBLISH command.
+```javascript
+PUBLISH weather temp:85f
+```
+- Clients can subscribe to these channels using the SUBSCRIBE command to receive the messages.
+- Subscribers will get a message like 
+  -  "message"
+  -  "weather" 
+  -  "temp:85f" 
+  when a new message is published.
+- Channels can be organized hierarchically, like weather:54481, so subscribers can subscribe to specific channels or use wildcards like weather:*.
+
+```javascript
+PUBLISH weather:54481 temp:85f
+```
+```javascript
+PSUBSCRIBE weather:<sup>*</sup>
+```
+[Example of using Pub/Sub for chat messaging](https://medium.com/@amangautam_23335/simple-chat-application-using-redis-as-message-broker-e32f16e65a44)
+
+1. Geospatial Indexes
+- Geospatial indexing in Redis allows you to store and work with data that has latitude and longitude coordinates.
+- You can add locations to a geospatial index using the GEOADD command,
+```javascript
+GEOADD towers -89.500 44.500 tower1
+```
+- Once the data is stored, you can use commands like GEODIST to calculate the distance between two points in the index.
+```javascript
+GEODIST towers tower1 tower2 mi 
+```
+This would return the distance in miles between the two towers. This makes it easy to work with spatial data and perform location-based operations.
+
+1. Streams
+- Streams in Redis are a data structure that models a log, where data is only appended and can only be read sequentially.
+- Streams are created and data is added to them using the XADD command.
+- Other commands like XRANGE allow you to read the data from the streams.
+- Streams provide a powerful way to work with append-only data, like event logs or message queues.
+
+
+### RediSearch
+RediSearch is a full-text search engine that works with Redis.
+It allows you to store documents within Redis and perform high-performance searches on that data.
+
+Key Features:
+- Real-time Secondary Indexing: RediSearch can create secondary indexes on your data in real-time, making searches faster.
+- Powerful Querying: You can use advanced querying techniques like Boolean logic, weighted results, and autocomplete suggestions.
+- Fuzzy Logic Search: RediSearch uses fuzzy logic to enhance search results, especially when combined with autocomplete.
+- Concurrency: RediSearch supports concurrent queries and concurrent indexing, which improves overall performance.
+
+How it works:
+You store your documents (e.g. text, emails, product descriptions) in Redis.
+RediSearch creates indexes on the content of those documents.
+When a user searches, RediSearch can quickly find the relevant documents based on the indexes.
+The search results can be ranked and filtered using the various querying capabilities of RediSearch.
+
+Key commands:
+- FT.CREATE: Creates a new index for a set of documents.
+- FT.ADD: Adds a new document to the index.
+- FT.SEARCH: Performs a search query and returns the matching documents.
+- FT.AUTOCOMPLETE: Provides autocomplete suggestions based on the search query.
+
+## Redis Sharding
+
+A Redis Cluster is a distributed implementation of the Redis in-memory data structure store. It is designed to provide high performance, linear scalability, and availability even in the face of network partitions.
+
+[Redis cluster 101](https://redis.io/docs/latest/operate/oss_and_stack/management/scaling/#redis-cluster-101)
+
