[chore]: update study guide unit 6

--- a/_posts/2024-03-02-unit6.md
+++ b/_posts/2024-03-02-unit6.md
@@ -38,7 +38,7 @@ aside:
 
 ### Redis server and cli interface
 Redis runs as a server-side software and provides a command line interface
-## [Install Redis aor Redis stack](https://redis.io/docs/latest/operate/oss_and_stack/install/)
+## [Install Redis or Redis stack](https://redis.io/docs/latest/operate/oss_and_stack/install/)
 
 Redis is a TCP Server: Redis communicates with clients over a TCP network connection.
 Request/Response Protocol: The interaction between the client and the Redis server follows a request-response pattern.
