[practical]: update practical 8

--- a/_posts/2024-03-02-unit6.md
+++ b/_posts/2024-03-02-unit6.md
@@ -288,3 +288,8 @@ A Redis Cluster is a distributed implementation of the Redis in-memory data stru
 
 [Redis cluster 101](https://redis.io/docs/latest/operate/oss_and_stack/management/scaling/#redis-cluster-101)
 
+Note: Redis Cluster requires at least 6 Redis instances to create a cluster. 
+
+## Redis Streams
+
+[Example and Documentation](https://redis.io/docs/latest/develop/connect/insight/tutorials/insight-stream-consumer/)
