--- a/_posts/2024-04-14-practical8.md
+++ b/_posts/2024-04-14-practical8.md
@@ -8,6 +8,36 @@ aside:
 
 # Guided Session
 
+## Retrive the number of databases
+```javascript
+CONFIG GET databases
+```
+Output:
+```javascript
+1) "databases"
+2) "16"
+```
+This indicates that there are 16 databases available in the Redis instance.
+
+The default configuration of Redis typically includes 16 databases (numbered from 0 to 15), but this value can be adjusted in the Redis configuration file (redis.conf). Additionally, some managed Redis services may have different default configurations.
+
+## Selecting a Database
+```javascript
+Select 0
+```
+
+## Deleting/Flushing from database
+
+This command deletes all keys from the currently selected database.
+```javascript
+FLUSHDB
+```
+This command deletes all keys from all databases in the Redis instance.
+```javascript
+FLUSHALL
+```
+
+
 ## Student Information Management System
 Consider a Student Information Management System; as redis does not follow table structure we can consider the following schema for our database.
 
@@ -206,6 +236,45 @@ GEORADIUS idx:student:location longitude latitude radius m COUNT count
 GEORADIUS idx:student:location longitude latitude radius m SORT asc
 ```
 [Sample dataset and tutorial for Theater Dataset](https://redis.io/learn/howtos/moviesdatabase/import)
+
+### Task 11: Redis Access Controls and Permissions
+- [Redis ACL](https://redis.io/docs/latest/commands/acl/)
+- [ACL Permissions](https://redis.io/docs/latest/operate/rc/security/access-control/data-access-control/configure-acls/)
+
+- Get all users in the database
+```javascript
+acl users
+```
+- Create a user
+```javascript
+ACL SETUSER user1 on >12345 +@all ~* >* on >* +get ~* +set
+```
+- Authenticate with Username and Password:
+```javascript
+AUTH user1 12345
+```
+- Verify permissions on the username:
+```javascript
+ACL LIST username
+```
+- Giving user permissions to access certain keys
+```javascript
+ACL SETUSER user2 on >12345
+```
+```javascript
+ACL SETUSER user2 on +@write ~student
+```
+Note: ACL does not directly control access to individual databases. Instead, it grants permissions for certain operations, such as read or write, across all databases.
+
+To achieve the goal of restricting a user to only one or two databases, you can use a workaround by creating separate Redis instances or containers, each configured to use a different set of databases, and then grant access to the user accordingly. 
+
+## Redis Pub/Sub
+
+- [Blog](https://medium.com/redis-with-raphael-de-lio/understanding-pub-sub-in-redis-18278440c2a9)
+- [Redis Pub/Sub](https://redis.io/docs/latest/develop/interact/pubsub/)
+
+## Connecting Python Application to Redis
+- [Python guide](https://redis.io/docs/latest/develop/connect/clients/python/)
 
 ## Caching in Redis
 
