[practical]: update practical 8

--- a/_posts/2024-04-14-practical8.md
+++ b/_posts/2024-04-14-practical8.md
@@ -8,7 +8,7 @@ aside:
 
 # Guided Session
 
-## Retrive the number of databases
+## Retrieve the number of databases
 ```javascript
 CONFIG GET databases
 ```
