[chore]: update study guide unit 8

--- a/_posts/2024-04-28-unit8.md
+++ b/_posts/2024-04-28-unit8.md
@@ -11,6 +11,12 @@ aside:
 ## Multilevel Indices Example
 
 ```javascript
+--Create a database
+CREATE DATABASE employee
+
+-- Use database
+\c employee
+
 -- Create a table
 CREATE TABLE employees (
     id SERIAL PRIMARY KEY,
@@ -48,4 +54,57 @@ SELECT *
 FROM employees
 WHERE name LIKE 'J%';
 ```
+
+## Secondary Indices example
+
+```javascripy
+--Create database
+CREATE DATABASE stud_ent
+
+--Use database
+\c stud_ent
+
+-- Create a table
+CREATE TABLE students (
+    id SERIAL PRIMARY KEY,
+    name TEXT,
+    grade INT,
+    city TEXT
+);
+
+-- Insert some data
+INSERT INTO students (name, grade, city)
+VALUES
+    ('John Doe', 90, 'New York'),
+    ('Jane Smith', 85, 'Boston'),
+    ('Michael Johnson', 92, 'Chicago'),
+    ('Emily Davis', 88, 'New York'),
+    ('David Wilson', 79, 'Los Angeles');
+
+-- Create a secondary index on the grade column
+CREATE INDEX idx_students_grade ON students (grade);
+
+-- Query using the secondary index
+EXPLAIN ANALYZE SELECT * FROM students WHERE grade > 85;
+```
+In this example:
+- We create a table students with columns id (primary key), name, grade, and city.
+- We insert some sample data into the table.
+- We create a secondary index idx_students_grade on the grade column.
+- When we query the table looking for students with a grade greater than 85, PostgreSQL will use the secondary index to quickly find the relevant rows, instead of scanning the entire table.
+
+### Secondary indices can also be created on multiple columns, known as composite indices.
+
+```javascript
+-- Create a composite secondary index on grade and city
+CREATE INDEX idx_students_grade_city ON students (grade, city);
+
+-- Query using the composite index
+EXPLAIN ANALYZE SELECT * FROM students WHERE grade > 85 AND city = 'New York';
+```
+In this case, the composite index on (grade, city) will be used to efficiently find students with a grade greater than 85 and city 'New York'.
+
+#### Note:
+Secondary indices improve query performance but come at the cost of additional storage space and overhead for insert/update/delete operations (since the index needs to be maintained). Therefore, secondary indices should be created judiciously, based on the query patterns and performance requirements of your application.
+
 
