--- a/_posts/2024-04-28-unit8.md
+++ b/_posts/2024-04-28-unit8.md
@@ -57,7 +57,7 @@ WHERE name LIKE 'J%';
 
 ## Secondary Indices example
 
-```javascripy
+```javascript
 --Create database
 CREATE DATABASE stud_ent
 
