[chore]: update unit 8 studyguide

--- a/_posts/2024-04-28-unit8.md
+++ b/_posts/2024-04-28-unit8.md
@@ -49,11 +49,16 @@ CREATE INDEX idx_employees_name_outer ON employees (name)
 WHERE id % 4 = 0; -- Only index every 4th row
 
 -- Query to find employees with name starting with 'J'
+
+SET enable_bitmapscan = on;
+SET enable_seqscan = off;
+
 EXPLAIN ANALYZE
 SELECT *
 FROM employees
 WHERE name LIKE 'J%';
 ```
+Note: The SET methods will force an index scan, however, this is not recommended as the database should determine by itself whether to use an index or not. For testing purpose we are turning off sequential scan which will get triggered due to the size of the table.
 
 ## Secondary Indices example
 
