[practical]: update practical 10

--- a/_posts/2024-05-04-practical10.md
+++ b/_posts/2024-05-04-practical10.md
@@ -14,31 +14,35 @@ Inserting a new value into a B+ tree follows these steps:
 - Search for the Leaf Node: Start from the root and traverse down the tree to find the appropriate leaf node where the new value should be inserted.
 - Insertion into Leaf Node: Insert the new value into the leaf node in a sorted order. If the leaf node overflows, split it into two nodes and promote the middle value to the parent node.
 - Propagate Changes Upwards: If the parent node of the leaf node overflows due to the split, apply the same splitting process recursively until the root if necessary.
-Example:
-Let's say we have a B+ tree with an order of 3:
 
+Example, Let's say we have a B+ tree with an order of 3:
 - Inserting 8 into the tree:
-- Traverse down to the leaf node containing values 7 and 9, then insert 8 between them.
-- If the leaf node overflows, split it and promote the middle value (8) to the parent node.
+  - Traverse down to the leaf node containing values 7 and 9, then insert 8 between them.
+  - If the leaf node overflows, split it and promote the middle value (8) to the parent node.
 
 ### Deletion
 Deleting a value from a B+ tree involves:
 - Search for the Value: Traverse down the tree to find the leaf node containing the value to be deleted.
 - Delete from Leaf Node: Remove the value from the leaf node. If the node underflows, borrow a value from adjacent nodes or merge nodes.
 - Propagate Changes Upwards: Update parent nodes if necessary due to underflow.
+
 Example:
 - Deleting 4 from the B+ tree:
-- Traverse down to the leaf node containing 4 and remove it.
-- If the leaf node underflows, borrow a value from an adjacent node or merge nodes.
+  - Traverse down to the leaf node containing 4 and remove it.
+  - If the leaf node underflows, borrow a value from an adjacent node or merge nodes.
 
-Updation
+### Updation
 Updating a value in a B+ tree combines deletion and insertion:
 - Delete the Old Value: Follow the deletion process to remove the old value from the tree.
 - Insert the New Value: Insert the new value into the tree using the insertion process.
+
 Example:
 - Updating 6 to 10 in the B+ tree:
-- Delete 6 from the tree.
-- Insert 10 into the tree.
+  - Delete 6 from the tree.
+  - Insert 10 into the tree.
+
+
+#### Code Example:
 
 ```javascript
 class BPlusTreeNode:
@@ -127,6 +131,7 @@ bplus_tree.update(6, 11)
 B+ tree multilevel indexing involves using multiple levels of B+ trees to index large datasets efficiently.
 
 Example:
+
 Consider a scenario where a single B+ tree cannot fit all the data in memory. Instead, we use multiple B+ trees, where each node of the root tree points to another B+ tree. This creates a hierarchy of B+ trees, enabling efficient indexing of large datasets while minimizing memory usage.
 
 ```javascript
@@ -215,9 +220,9 @@ One of the drawbacks of the B+-tree index structure is that its performance can 
 Several alternative index structures have been proposed to handle workloads with
 a high write/insert rate. The log-structured merge tree or LSM tree and its variants are
 write-optimized index structures that have seen very significant adoption. The buffer
-tree is an alternative approach, which can be used with a variety of search tree structures
+tree is an alternative approach, which can be used with a variety of search tree structures.
 
 
 - Propose any index structure with high write/insert rate.
 - Explain how these index structures are a better alternative.
-- Implement the structure using python.
+- Implement the index structure using python.
