--- a/_posts/2024-04-28-unit9.md
+++ b/_posts/2024-04-28-unit9.md
@@ -11,40 +11,55 @@ aside:
 ## Equivalence Rules
 
 
-1. Conjunctive selection can be deconstructed:
+### A. Conjunctive selection can be deconstructed:
 
 This statement essentially means that if you have a selection operation involving two conditions (θ1 and θ2) joined by a logical AND (represented by ∧), you can break it down into two separate selection operations.
 So, selecting rows from relation E where both condition θ1 and condition θ2 are true can be done by first applying selection based on θ2, and then applying selection based on θ1 on the result of the first selection.
-Mathematically, it's represented as:
-σθ1∧θ2(E) ≡ σθ1(σθ2(E))
 
-2. Selection operations are commutative:
+Mathematically, it's represented as:
+```javascript
+σθ1∧θ2(E) ≡ σθ1(σθ2(E))
+```
+
+### B. Selection operations are commutative:
 
 This property states that the order of applying selection operations doesn't affect the final result.
 So, whether you first apply selection based on condition θ1 and then on condition θ2, or vice versa, the resulting set of rows will be the same.
-Mathematically, it's represented as:
-σθ1(σθ2(E)) ≡ σθ2(σθ1(E))
 
-3. Theta joins are commutative:
+Mathematically, it's represented as:
+```javascript
+σθ1(σθ2(E)) ≡ σθ2(σθ1(E))
+```
+
+### C. Theta joins are commutative:
 
 This property states that the order of joining two relations using a theta join doesn't affect the final result.
 So, whether you join relation E1 with relation E2 based on condition θ, or you join E2 with E1 using the same condition, the resulting relation will be the same.
-Mathematically, it's represented as:
-E1 ⋈θ E2 ≡ E2 ⋈θ E1
 
-4. Natural joins are associative:
+Mathematically, it's represented as:
+```javascript
+E1 ⋈θ E2 ≡ E2 ⋈θ E1
+```
+
+### D. Natural joins are associative:
 
 This property states that the order in which you perform natural joins of three relations doesn't affect the final result.
 Whether you first join relation E1 with relation E2 based on their common attributes, and then join the result with relation E3, or you first join E2 with E3 and then join the result with E1, the resulting relation will be the same.
+
 Mathematically, it's represented as:
+```javascript
 (E1 ⋈ E2) ⋈ E3 ≡ E1 ⋈ (E2 ⋈ E3)
+```
 
 5. Selection distributes over join:
 
 This property states that selection can be distributed over a join operation under certain conditions.
 If the predicate condition (θ1) of the selection only involves attributes from one of the relations being joined (E1), then you can apply the selection either before or after the join operation.
 Mathematically, it's represented as:
+
+```javascript
 σθ1(E1 ⋈θ E2) ≡ (σθ1(E1)) ⋈θ E2
+```
 
 
 ## Example Transformation
@@ -61,7 +76,7 @@ Transformed Query:
 
 
 
-1. Selection Pushdown (σ):
+A. Selection Pushdown (σ):
 
 We apply the selection pushdown rule, which states that selection can be pushed down (applied earlier) through the join operation if the condition of the selection involves attributes from only one of the relations involved in the join.
 In the original query, the condition dept_name="Music" involves only the instructor relation, so we apply this condition directly to the instructor relation.
@@ -70,24 +85,94 @@ The transformation becomes:
 Πname,title((σdept_name="Music"(instructor)) ⋈ (teaches ⋈ Πcourse_id,title(course)))
 ```
 
-2. Associativity of Join (⋈):
+B. Associativity of Join (⋈):
 
 We then use the associativity of join, which states that the order of joins doesn't affect the result as long as the join conditions remain the same.
 The original query has nested joins. We can reassociate these joins without changing the result:
 
 (instructor ⋈ teaches) ⋈ Πcourse_id,title(course)  =>  instructor ⋈ (teaches ⋈ Πcourse_id,title(course))
+
 After applying this rule, we get the transformed query:
 
 ```javascriot
 Πname,title((σdept_name="Music"(instructor)) ⋈ σyear=2017(teaches) ⋈ Πcourse_id,title(course))
 ```
 
-3. Selection Distribution (σ):
+C, Selection Distribution (σ):
 
 Finally, we apply the selection distribution rule, which states that selection can be distributed over the join operation under certain conditions.
 In the transformed query, the condition year=2017 involves only the teaches relation after the first join, so we can apply this condition directly to the teaches relation.
+
 The transformation becomes:
 ```javascript
 Πname,title((σdept_name="Music"(instructor)) ⋈ σyear=2017(teaches) ⋈ Πcourse_id,title(course))
 ```
 By applying these equivalence rules, we transformed the original query into its transformed form while preserving the semantics of the query. 
+
+## Cost Estimation
+
+### Catalog Statistics
+
+Catalog stores statistics like number of tuples (nr), blocks (br), tuple size (lr) for each relation r.
+Also stores number of distinct values V(A,r) for each attribute A.
+
+The database catalog stores important pre-computed statistics about each relation r:
+- nr : The number of tuples in r
+- br : The number of disk blocks containing tuples of r
+- lr : The size of a tuple of r in bytes
+- fr : The blocking factor - number of tuples of r that fit in one block
+- V(A,r) : The number of distinct values appearing in attribute A of r
+- V(A,r) is the same as the size of the projection ΠA(r)
+
+If A is a key for r, then V(A,r) = nr
+- The catalog can also store V(X,r) for sets of attributes X, not just singles attributes.
+- The statistics in the catalog need to be updated whenever relations are modified significantly.
+
+
+### Selection Size Estimation
+
+For a selection σA=a(r):
+- If a is a frequent value and its count is stored, use that count
+- Else if no histogram is available, we assume uniform value distribution and estimate nr/V(A,r)
+- If a histogram on A is available, we can get a better estimate using the histogram statistics
+
+For σA≤v(r), assuming uniform distribution:
+- Estimate is 0 if v < min(A,r)
+- Estimate is nr if v ≥ max(A,r)
+- Else estimate is nr * (v - min(A,r))/(max(A,r) - min(A,r))
+
+For a conjunctive selection σθ1∧θ2(r):
+- Estimate sizes s1, s2 for each condition θ1, θ2 separately
+- Assuming conditions are independent, estimate s1*s2/nr^2
+- Disjunctions and negations are handled similarly, using unions/differences of estimation formulas
+
+
+### Join Size Estimation
+
+For a Cartesian product r × s, estimate is simply nr * ns
+For a join r ⋈ s:
+- If R ∩ S = ∅, estimate is nr * ns like a Cartesian product
+- If R ∩ S is a key for either R or S, estimate is ≤ size of the other relation
+- Else, let R ∩ S = {A}
+
+Estimate 1: nr * ns / V(A,s) -- assuming each tuple of r joins with ns/V(A,s) tuples of s
+Estimate 2: nr * ns / V(A,r)
+
+Take the minimum of the two estimates.
+The minimum estimate is more accurate if there are dangling tuples.
+Assumptions of uniform distribution and no dangling tuples are simplistic but provide a reasonable approximation.
+We can use histograms on join attributes for better estimates if available.
+
+
+### Other Operation Size Estimates
+
+- For projection ΠA(r), estimated size is V(A,r) since it removes duplicates.
+- For aggregation GγA(r), estimated size is V(G,r) - one tuple per distinct group.
+- For union r ∪ s, estimate is sum of sizes of r and s (upper bound).
+- For intersection r ∩ s, estimate is minimum of sizes of r and s (upper bound).
+- For set difference r - s, estimate is size of r (upper bound).
+- For outer joins, estimates use sizes of inputs and inner join.
+
+r ⟕ s is estimated as size of r ⋈ s + size of r
+r ⟖ s is symmetric to left outer join
+r ⟗ s is estimated as size of r ⋈ s + size of r + size of s
