[practical]: update practical 12

--- a/_posts/2024-05-23-practical12.md
+++ b/_posts/2024-05-23-practical12.md
@@ -350,7 +350,7 @@ Read the Blog and Write a summary of the blog in your report.
 
 [Database Recovery Blog](https://www.timescale.com/blog/database-backups-and-disaster-recovery-in-postgresql-your-questions-answered/#:~:text=The%20most%20common%20way%20to,was%20at%20the%20backup%20time.)
 
-Read Blog and retrieve Bandb database logs
+Read Blog and retrieve lockdemo database logs
 
 [Postgres Database logs Blog](https://betterstack.com/community/guides/logging/how-to-start-logging-with-postgresql/)
 
