update unit1 notes

--- a/_posts/2024-02-01-unit1.md
+++ b/_posts/2024-02-01-unit1.md
@@ -33,13 +33,13 @@ aside:
 
  <img src="https://raw.githubusercontent.com/palden518/DBS101.github.io/master/assets/images/historyOfDB.png" alt="History of Database Systems">
 
-
-### 1.4 Database-System Applications
-### 1.5 Database Languages
-### 1.6 Database Design
-### 1.7 Database Engine
-### 1.8 Database and Application Architecture 
 ### 1.9 Database Users and Administrators
+
+-  [Different types of database users](https://www.geeksforgeeks.org/different-types-of-database-users/)
+-  [Roles and Responsibilities of a database administrator in the age of Big Data](https://www.bmc.com/blogs/dba-database-administrator/)
+
+
+
 
 
 
