--- a/_posts/2025-03-11-practical3.md
+++ b/_posts/2025-03-11-practical3.md
@@ -1,5 +1,5 @@
 ---
-title: Practical 3 - Introduction to SQL
+title: Practical 3 - SQL Aggregate Functions and Nested Subqueries
 sidebar:
   nav: pract-en
 aside:
@@ -10,6 +10,9 @@ aside:
 
 ## Example: Entity Relationship Diagram for Online Airline Ticketing/Reservation System
 <img src="https://raw.githubusercontent.com/palden518/DBS101.github.io/master/assets/images/pract1_1.png" alt="Airline Ticketing System ERD">
+
+
+## Before we begin the tasks, check if all of the tables inside your Airlineticketingdb have data, if you have deleted them while performing some deletion exercise from the previous practical, go back to practical 2 and run the INSERTION QUERIES for the empty tables.
 
 
 ## Task 1: Aggregate Functions
@@ -336,9 +339,9 @@ SELECT
 FROM 
     Flight;
 ```
-# Practical 2 Exercise
+# Practical 3 Exercise
 
 ## Entity Relationship Diagram for Banking System
 <img src="https://raw.githubusercontent.com/palden518/DBS101.github.io/master/assets/images/pract1_2.png" alt="Banking System ERD">
 
-## Perform all tasks given in the guided session on the database you created for practical exercise 1.
+## Perform all tasks given in the guided session on the database you created for practical exercise 2.
