--- a/_posts/2025-03-11-practical3.md
+++ b/_posts/2025-03-11-practical3.md
@@ -12,7 +12,7 @@ aside:
 <img src="https://raw.githubusercontent.com/palden518/DBS101.github.io/master/assets/images/pract1_1.png" alt="Airline Ticketing System ERD">
 
 
-## Before we begin the tasks, check if all of the tables inside your Airlineticketingdb have data, if you have deleted them while performing some deletion exercise from the previous practical, go back to practical 2 and run the INSERTION QUERIES for the empty tables.
+### Before we begin the tasks, check if all of the tables inside your Airlineticketingdb have data, if you have deleted them while performing some deletion exercise from the previous practical, go back to practical 2 and run the INSERTION QUERIES for the empty tables.
 
 
 ## Task 1: Aggregate Functions
@@ -83,6 +83,19 @@ aside:
      avg_fare
     WHERE c.Fare > avg_fare.avg_fare;
    ```
+The WITH clause defines a temporary relation (temporaryTable), which contains values selected from some_table.
+The subsequent SELECT query uses this temporary table in the main query to perform a join or filter data based on specific conditions.
+Syntax:
+```javascript
+WITH temporaryTable (averageValue) AS (
+    SELECT AVG (Attr1)
+    FROM Table
+)
+    SELECT Attr1
+    FROM Table, temporaryTable
+    WHERE Table.Attr1 > temporaryTable.averageValue;
+```
+
 ## Task 2: Aggregate with Grouping
 
 Find the average ticket fare for each class type:
@@ -145,6 +158,13 @@ FROM Flight;
 ```
 2. Copy data into an existing table structure:
 ```javascript
+CREATE TABLE Airline_Backup (
+    Contact_no varchar(20),
+    Airline_name varchar(255) PRIMARY KEY, 
+    Flight_no varchar(10)
+);
+```
+```javascript
 INSERT INTO Airline_Backup (Airline_name, Contact_no, Flight_no)
 SELECT Airline_name, Contact_no, Flight_no
 FROM Airline;
@@ -156,14 +176,7 @@ INTO Flight_Booking_Summary
 FROM Ticket
 GROUP BY Flight_no;
 ```
-4. Insert aggregated results into an existing summary table:
-```javascript
-INSERT INTO Flight_Summary (Flight_no, Total_Miles, Total_Duration)
-SELECT Flight_no, SUM(Distance) AS Total_Miles, 
-       SUM(Arr_time - Dep_time) AS Total_Duration
-FROM Flight
-GROUP BY Flight_no;
-```
+
 ## Task 6: Output Control
 
 1. Limit
