--- a/_posts/2025-03-11-practical3.md
+++ b/_posts/2025-03-11-practical3.md
@@ -12,7 +12,7 @@ aside:
 <img src="https://raw.githubusercontent.com/palden518/DBS101.github.io/master/assets/images/pract1_1.png" alt="Airline Ticketing System ERD">
 
 
-### Before we begin the tasks, check if all of the tables inside your Airlineticketingdb have data, if you have deleted them while performing some deletion exercise from the previous practical, go back to practical 2 and run the INSERTION QUERIES for the empty tables.
+#### Before working on the tasks check if all of the tables inside your Airlineticketingdb have data, if you have deleted them while performing some deletion exercise from the previous practical, go back to practical 2 and run the INSERTION QUERIES for the empty tables.
 
 
 ## Task 1: Aggregate Functions
